--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 
 <body>
 
-    <div id="clock-container">
-        <div id="time">00:00</div>
-        <div id="date">LOADING...</div>
-    </div>
+    <div id="main-container">
+        <div id="clock-container">
+            <div id="time">00:00</div>
+            <div id="date">LOADING...</div>
+        </div>
 
-    <div id="weather-container">
-        <div id="weather-icon"></div>
-        <div id="weather-text">--°</div>
+        <div id="weather-container">
+            <div id="weather-icon"></div>
+            <div id="weather-text">--°</div>
+        </div>
     </div>
 
     <script src="main.js"></script>
